extras/https/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: frontend-ip
    networking.gke.io/managed-certificates: boa-cert
    kubernetes.io/ingress.class: "gce"
spec:
  backend:
    serviceName: frontend
    servicePort: 80
